--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "csvtojson": "^2.0.8",
     "form-data": "^2.3.3",
     "got": "^9.6.0",
