--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "csvtojson": "^2.0.8",
     "form-data": "^2.3.3",
     "got": "^9.6.0",
-    "jimp": "^0.6.4"
+    "jimp": "^0.6.4",
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.133",
     "@types/node": "^12.0.3"
   }
 }
