--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "form-data": "^2.3.3",
     "got": "^9.6.0",
     "jimp": "^0.6.4",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "rxjs": "^6.5.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.133",
